First working version of $resource Angular service with Feeds

--- a/server/dutils-server/web/client/html/feeds.html
+++ b/server/dutils-server/web/client/html/feeds.html
@@ -8,33 +8,19 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Username</th>
+                                    <th>Description</th>
+                                    <th>Url</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
+                                <tr ng-repeat="feed in feeds">
+                                    <td>-</td>
+                                    <td>{{feed.description}}</td>
+                                    <td>{{feed.url}}</td>
                                 </tr>
                             </tbody>
                         </table>
-                    </div>    
+                    </div>
                 </div>
             </div>
         </div>
