--- a/server/dutils-server/web/client/html/feeds.html
+++ b/server/dutils-server/web/client/html/feeds.html
@@ -1,7 +1,21 @@
 <div class="row">
     <div class="col-lg-12">
+     <h1 class="page-header">Feeds</h1>
+    </div>
+</div>
+<div class="row torrent-feeds">
+    <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Torrent Feeds</div>
+            <div class="panel-heading">Feeds List
+                <div class="pull-right">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary" ng-click="showFeedForm()">
+                            <span class="glyphicon glyphicon-plus"></span>
+                            New
+                        </button>
+                    </div>
+                </div>
+            </div>
                 <div class="panel-body">
                      <div class="table-responsive">
                         <table class="table table-striped">
@@ -10,18 +24,28 @@
                                     <th>#</th>
                                     <th>Description</th>
                                     <th>Url</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="feed in feeds">
-                                    <td>-</td>
+                                    <td>{{$index + 1}}</td>
                                     <td>{{feed.description}}</td>
                                     <td>{{feed.url}}</td>
+                                    <td>
+                                        <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>&nbsp;
+                                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
+</div>
+
+
+<div class="row" ng-show="showForm">
+    <div ng-include="'../client/html/feed-add.html'"></div>
+</div>
