--- a/server/dutils-server/web/client/html/feeds.html
+++ b/server/dutils-server/web/client/html/feeds.html
@@ -46,6 +46,7 @@
 </div>
 
 
-<div class="row" ng-show="showForm">
-    <div ng-include="'../client/html/feed-add.html'"></div>
+<div class="row">
+    <admin-form object="feed" fields="url,description">
+    </admin-form>
 </div>
